[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=1]
[ext_resource path="res://young_plants/script/young_plant.gd" type="Script" id=2]
[ext_resource path="res://young_plants/texture/carrot/carrot-1.png" type="Texture" id=3]
[ext_resource path="res://young_plants/ui/scene/young_plant_tooltip.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/textures/icons/information_icon.png" type="Texture" id=5]

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[node name="YoungPlant" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )

[node name="Shake" parent="Sprite" instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -9, -21, -9, 7, 10, 7, 7, -20 )

[node name="Shadow" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Shake" parent="Shadow" instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[node name="YoungPlantTimers" type="Node" parent="."]

[node name="GrowingTimer" type="Timer" parent="YoungPlantTimers"]
one_shot = true

[node name="WaterTimer" type="Timer" parent="YoungPlantTimers"]

[node name="FertilizerTimer" type="Timer" parent="YoungPlantTimers"]

[node name="HealthTimer" type="Timer" parent="YoungPlantTimers"]

[node name="DeceaseTimer" type="Timer" parent="YoungPlantTimers"]

[node name="YoungPlantTooltipHolder" type="Node2D" parent="."]
z_index = 4

[node name="YoungPlantTooltip" parent="YoungPlantTooltipHolder" instance=ExtResource( 4 )]
visible = false
margin_left = 11.0
margin_top = -96.0
margin_right = 11.0
margin_bottom = -96.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="TooltipCheckArea" type="TextureRect" parent="YoungPlantTooltipHolder"]
margin_left = 8.0
margin_top = -4.0
margin_right = 18.0
margin_bottom = 6.0
input_pass_on_modal_close_click = false
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
